# tango-extensions

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy_and_release.yaml
tango_ext/common/testing/: __init__.py
tango_ext/integrations/albumentations/: __init__.py  augmentations.py  transforms.py
tango_ext/integrations/albumentations/core/: __init__.py  composition.py  utils.py
tango_ext/integrations/diffusers/: __init__.py  format.py  pipeline.py
tests/integrations/albumentations/: augmentations_test.py  transforms_test.py
tests/integrations/albumentations/core/: composition_test.py
tests/integrations/diffusers/: format_test.py  pipeline_test.py
tests/integrations/transformers/: tokenizers_test.py
