[tool.poetry]
name = "tango-extensions"
version = "0.0.0" # specified by poetry-dynamic-versioning
description = "Extension modules for allenai/tango (ai2-tango)"
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{include = "tango_ext"}]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "<2"
ai2-tango = { extras = [
    "datasets",
    "examples",
    "torch",
    "transformers",
    "wandb",
], version = ">=1.0.0" }
diffusers = {extras = ["diffusers"], version = ">=0.5.0", optional = true}

[tool.poetry.extras]
diffusers = ["diffusers"]
all = ["diffusers"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
black = "^23.7.0"
mypy = "^1.5.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
