[tool.poetry]
name = "tango-extensions"
version = "0.0.0" # specified by poetry-dynamic-versioning
description = "Extension modules for allenai/tango (ai2-tango)"
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{include = "tango_ext"}]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "<2"
ai2-tango = { extras = [
    "datasets",
    "examples",
    "torch",
    "transformers",
    "wandb",
], version = ">=1.0.0" }
diffusers = { version = ">=0.18.0", optional = true }
accelerate = {version = "^0.22.0", optional = true}

[tool.poetry.extras]
diffusers = ["diffusers", "accelerate"]
all = ["diffusers", "accelerate"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
black = "^23.7.0"
mypy = "^1.5.1"
pytest = "^7.4.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
